# AgarIOClientAndServer

./: .gitignore
AGARTESTSRV/: CMakeLists.txt  Server.cpp  game_data.cpp  game_data.h  main.cpp  server.h
AGARtest1/: CMakeLists.txt  main.cpp
AGARtest1/headers/: Client.h  GamePage.h  InterFace.h  Login.h  connection.h
AGARtest1/sources/: Client.cpp  GamePage.cpp  InterFace.cpp  Login.cpp  connection.cpp
